--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "bordex",
   "version": "1.0.0",
-  "main": "dist/main.js",
+  "source": "src/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.module.js",
+  "types:": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "parcel build src/index.ts --target main && tsc --emitDeclarationOnly",
+    "dev": "parcel src/index.ts --open"
+  },
+  "targets": {
+    "main": {
+      "outputFormat": "esmodule",
+      "distDir": "./dist",
+      "engines": {
+        "browsers": "> 0.25%, not dead"
+      }
+    }
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -32,6 +46,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "parcel": "^2.12.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.0"
