--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/index.module.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "files": [
@@ -17,7 +16,7 @@
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
     "prepare": "husky",
-    "build": "parcel build src/index.ts --target main && tsc --emitDeclarationOnly",
+    "build": "parcel build src/index.ts --target main && npx dts-bundle-generator -o dist/index.d.ts src/index.ts",
     "dev": "parcel src/index.ts --open"
   },
   "targets": {
@@ -58,9 +57,12 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
+    "@parcel/packager-ts": "^2.12.0",
+    "@parcel/transformer-typescript-types": "^2.12.0",
     "@tsconfig/recommended": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
+    "dts-bundle-generator": "^9.5.1",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
