--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
     "prepare": "husky",
-    "build": "parcel build src/index.ts --target main && npx dts-bundle-generator -o dist/index.d.ts src/index.ts",
+    "build": "parcel build src/index.ts --no-source-maps --target main && npx dts-bundle-generator -o dist/index.d.ts src/index.ts",
     "dev": "parcel src/index.ts --open",
-    "compile": "parcel build src/index.ts --target main"
+    "compile": "parcel build src/index.ts --no-source-maps --target main"
   },
   "targets": {
     "main": {
