--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "homepage": "https://bordex.netlify.app/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zshaian/bordex"
+    "url": "git+https://github.com/zshaian/bordex.git"
   },
   "bugs": {
     "url": "https://github.com/zshaian/bordex/issues"
