--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bordex",
   "version": "0.2.0",
-  "source": "src/index.ts",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "files": [
@@ -16,9 +16,10 @@
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
     "prepare": "husky",
-    "build": "parcel build src/index.ts --no-source-maps --target main && npx dts-bundle-generator -o dist/index.d.ts src/index.ts",
-    "dev": "parcel src/index.ts --open",
-    "compile": "parcel build src/index.ts --no-source-maps --target main"
+    "test": "jest",
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "targets": {
     "main": {
@@ -55,23 +56,57 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@chromatic-com/storybook": "^3.2.4",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
-    "@parcel/packager-ts": "^2.12.0",
     "@parcel/transformer-typescript-types": "^2.12.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@storybook/addon-essentials": "^8.5.8",
+    "@storybook/addon-interactions": "^8.5.8",
+    "@storybook/addon-onboarding": "^8.5.8",
+    "@storybook/blocks": "^8.5.8",
+    "@storybook/react": "^8.5.8",
+    "@storybook/react-vite": "^8.5.8",
+    "@storybook/test": "^8.5.8",
+    "@testing-library/react": "^16.2.0",
     "@tsconfig/recommended": "^1.0.7",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.10",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.5",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
-    "dts-bundle-generator": "^9.5.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-storybook": "^0.11.3",
     "husky": "^9.1.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "parcel": "^2.12.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.3",
+    "react": "^19.0.0",
+    "rollup": "^4.34.8",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "storybook": "^8.5.8",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.8.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
