--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "jest",
     "rollup": "rollup -c --bundleConfigAsCjs",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build-storybook-docs": "storybook build --docs",
+    "deploy-storybook": "gh-pages -d storybook-static -b docs-pages -m docs:update"
   },
   "targets": {
     "main": {
@@ -88,6 +90,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.11.3",
+    "gh-pages": "^6.3.0",
     "husky": "^9.1.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
