chore: update build command and fix type imports in border components

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prettier:fix": "prettier --write .",
     "prepare": "husky",
     "test": "jest",
-    "rollup": "rollup -c --bundleConfigAsCjs",
+    "build": "rollup -c --bundleConfigAsCjs",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
